--- a/app/src/main/res/layout/activity_questionnaire_answers.xml
+++ b/app/src/main/res/layout/activity_questionnaire_answers.xml
@@ -6,14 +6,14 @@
     android:id="@+id/linearLayout2"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:descendantFocusability="beforeDescendants"
-    android:background="@color/md_blue_grey_100">
+    android:background="@color/cardview_shadow_start_color"
+    android:descendantFocusability="beforeDescendants">
 
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbarQuestionnairesAnswersT"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:background="@color/colorGreen"
+        android:background="@color/cardview_shadow_start_color"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -102,7 +102,6 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@color/md_blue_grey_100"
             android:orientation="vertical">
 
             <android.support.v7.widget.RecyclerView
@@ -123,25 +122,29 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent">
 
-        <Button
+        <TextView
             android:id="@+id/answer_cancel_btn"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_margin="8dp"
             android:layout_weight="1"
-            android:background="@color/colorRed"
             android:text="CANCEL"
+            android:textAlignment="center"
+            android:textColor="@color/colorAuthText"
             android:textSize="18sp"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent" />
 
-        <Button
+        <TextView
             android:id="@+id/answer_save_btn"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_margin="8dp"
             android:layout_weight="1"
-            android:background="@color/colorGreen"
             android:text="SAVE ANSWERS"
+            android:textAlignment="center"
+            android:textColor="@color/colorAuthText"
             android:textSize="18sp"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
