--- a/app/src/main/res/layout/activity_questionnaire_creation.xml
+++ b/app/src/main/res/layout/activity_questionnaire_creation.xml
@@ -6,18 +6,18 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_weight="1"
-    android:background="@drawable/back_ground_img_login"
+    android:background="@color/cardview_shadow_start_color"
+    android:descendantFocusability="beforeDescendants"
     android:focusable="true"
     android:focusableInTouchMode="true"
     android:orientation="vertical"
-    android:descendantFocusability="beforeDescendants"
     tools:context="com.qit.android.activity.QuestionnaireCreationActivity">
 
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbarQuestionnaireCreation"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/colorGreen"
+        android:background="@color/cardview_shadow_start_color"
         app:theme="@style/Base.ThemeOverlay.AppCompat.Dark.ActionBar" />
 
     <!--   <ImageView
@@ -82,7 +82,7 @@
         android:layout_width="match_parent"
         android:layout_height="5dp"
         android:layout_marginTop="16dp"
-        android:background="@color/colorLightBlue"
+        android:background="@color/cardview_shadow_start_color"
         app:layout_constraintTop_toBottomOf="@+id/tilDescription" />
 
     <ScrollView
@@ -294,27 +294,31 @@
         android:layout_height="wrap_content"
         android:layout_weight="1">
 
-        <Button
+        <TextView
             android:id="@+id/btnCancel"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="bottom"
             android:layout_weight="1"
-            android:background="@color/colorRed"
             android:onClick="handleBtnCancel"
+            android:padding="8dp"
             android:text="Cancel"
+            android:textAlignment="center"
+            android:textColor="@color/colorAuthText"
             android:textSize="18sp"
             android:textStyle="bold" />
 
-        <Button
+        <TextView
             android:id="@+id/btnNext"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="bottom"
             android:layout_weight="1"
-            android:background="@color/colorGreen"
             android:onClick="handleBtnNext"
+            android:padding="8dp"
             android:text="Next"
+            android:textAlignment="center"
+            android:textColor="@color/colorAuthText"
             android:textSize="18sp"
             android:textStyle="bold" />
     </LinearLayout>
