--- a/app/src/main/res/layout/fragment_questionnaire_tab.xml
+++ b/app/src/main/res/layout/fragment_questionnaire_tab.xml
@@ -1,43 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/scrollViewQuestionnaire"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/cardview_shadow_start_color"
+    android:orientation="vertical"
+    app:tabMode="scrollable">
 
-    <LinearLayout
+    <include layout="@layout/material_view_pager_placeholder" />
+
+    <android.support.v7.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:layout_marginBottom="@dimen/cardMarginVertical"
+        android:layout_marginLeft="@dimen/cardMarginHorizontal"
+        android:layout_marginRight="@dimen/cardMarginHorizontal"
+        android:layout_marginTop="@dimen/cardMarginVertical"
+        android:background="@android:color/white"
+        app:cardElevation="4dp">
 
-        <include layout="@layout/material_view_pager_placeholder" />
-
-        <android.support.v7.widget.CardView
+        <LinearLayout
+            android:id="@+id/llForListView"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="@dimen/cardMarginVertical"
-            android:layout_marginLeft="@dimen/cardMarginHorizontal"
-            android:layout_marginRight="@dimen/cardMarginHorizontal"
-            android:layout_marginTop="@dimen/cardMarginVertical"
-            android:background="@android:color/white"
-            app:cardElevation="8dp">
+            android:layout_height="match_parent"
+            android:background="@color/cardview_shadow_end_color"
+            android:orientation="vertical">
 
-            <LinearLayout
-                android:id="@+id/llForListView"
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/questionnaireRV"
                 android:layout_width="match_parent"
-                android:layout_height="1000dp"
-                android:background="@color/cardview_shadow_end_color"
-                android:orientation="vertical">
+                android:layout_height="match_parent" />
 
-                <android.support.v7.widget.RecyclerView
-                    android:id="@+id/questionnaireRV"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content" />
+        </LinearLayout>
 
-            </LinearLayout>
+    </android.support.v7.widget.CardView>
+</LinearLayout>
 
-        </android.support.v7.widget.CardView>
-    </LinearLayout>
-
-</android.support.v4.widget.NestedScrollView>
