--- a/app/src/main/res/layout/item_event_card.xml
+++ b/app/src/main/res/layout/item_event_card.xml
@@ -43,13 +43,15 @@
             android:id="@+id/tv_owner_card"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
+            android:layout_marginBottom="8dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="4dp"
             android:text="TextView"
             android:textSize="12sp"
             android:textStyle="bold"
-            app:layout_constraintBottom_toBottomOf="@+id/tv_date_card"
-            app:layout_constraintStart_toEndOf="@+id/tv_date_card"
-            app:layout_constraintTop_toTopOf="@+id/tv_date_card" />
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/tv_date_card" />
 
         <TextView
             android:id="@+id/tv_is_event_opened_card"
@@ -70,13 +72,11 @@
             android:id="@+id/tv_date_card"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="8dp"
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
             android:text="TextView"
             android:textSize="12sp"
             android:textStyle="bold"
-            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tv_details_card" />
     </android.support.constraint.ConstraintLayout>
