--- a/app/src/main/res/layout/item_interview_list.xml
+++ b/app/src/main/res/layout/item_interview_list.xml
@@ -99,16 +99,16 @@
 
                 <ImageButton
                     android:id="@+id/menuImgBtnInterview"
-                    android:layout_width="32dp"
-                    android:layout_height="32dp"
+                    android:layout_width="24dp"
+                    android:layout_height="24dp"
                     android:layout_marginBottom="4dp"
                     android:background="@drawable/menu_img"
                     android:tint="@color/cardview_dark_background" />
 
                 <ImageButton
                     android:id="@+id/editImgBtnInterview"
-                    android:layout_width="32dp"
-                    android:layout_height="32dp"
+                    android:layout_width="24dp"
+                    android:layout_height="24dp"
                     android:layout_marginBottom="4dp"
                     android:layout_marginTop="4dp"
                     android:background="@drawable/edit_img"
@@ -116,8 +116,8 @@
 
                 <ImageButton
                     android:id="@+id/delImgBtnInterview"
-                    android:layout_width="match_parent"
-                    android:layout_height="32dp"
+                    android:layout_width="24dp"
+                    android:layout_height="24dp"
                     android:layout_marginBottom="4dp"
                     android:layout_marginTop="4dp"
                     android:background="@drawable/del_img"
@@ -148,6 +148,16 @@
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:padding="8dp" />
+
+        <LinearLayout
+            android:id="@+id/interviewCounterLinearLayout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/cardview_shadow_start_color"
+            android:gravity="center"
+            android:orientation="horizontal">
+
+        </LinearLayout>
 
     </LinearLayout>
 
